--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "watchfile"
+name = "negahban"
 authors = ["aarmn <aarmn80@gmail.com>"]
 homepage = "https://github.com/aarmn/watchman" # acctually repo
 repository = "https://github.com/aarmn/watchman"
