--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "negahban"
 authors = ["aarmn <aarmn80@gmail.com>"]
-homepage = "https://github.com/aarmn/watchman" # acctually repo
-repository = "https://github.com/aarmn/watchman"
+homepage = "https://github.com/aarmn/negahban" # acctually repo
+repository = "https://github.com/aarmn/negahban"
 version = "0.1.0"
 edition = "2021"
 license = "Apache-2.0"
@@ -19,3 +19,5 @@ keywords = ["game", "engine", "gamedev", "graphics", "bevy"]
 [dependencies]
 derivative = "2.2.0"
 notify = {version = "5.1.0", features = ["mio"], optional = false}
+
+[dev-dependencies]
