Add content to readme.md, update description, Cleaning main.rs, Bumping Version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,11 +3,11 @@ name = "negahban"
 authors = ["aarmn <aarmn80@gmail.com>"]
 homepage = "https://github.com/aarmn/negahban" # acctually repo
 repository = "https://github.com/aarmn/negahban"
-version = "0.2.1"
+version = "0.2.2"
 edition = "2021"
 license = "Apache-2.0"
 readme = "readme.md" # readme-cargo.md
-description = "🕵 A better and simple file watcher, based on notify, designed to be simple and async friendly"
+description = "🧐 A simple file watcher, based on `notify`, designed to be fast, easy-to-use and async friendly"
 rust-version = "1.67.0"
 keywords = ["watcher", "filesystem", "watchexec"]
 categories = ["asynchronous", "filesystem"]
